--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 server:
-  servlet:
-    context-path: /accounts-service
   port: 8080
-
+  servlet:
+    context-path: "/accounts-service"
 
 spring:
+  application:
+    name: "accounts"
+  profiles:
+    active: "prod"
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -19,25 +22,15 @@ spring:
       ddl-auto: update
     show-sql: true
   config:
-    import:
-      - "application_prod.yml"
-      - "application_qa.yml"
-  profiles:
-    active:
-      - "prod"
+    import: "optional:configserver:http://localhost:8071/"
+  rabbitmq:
+    host: "localhost"
+    port: 5672
+    username: "guest"
+    password: "guest"
 
-build:
-  version: "1.0"
-
-
-
-account:
-  message: "Welcome to The Configuration properties Class"
-  contactDetails:
-    name: "Akmal Ahmed Galal"
-    email: "Akmal.Ahmed@gmail.com"
-  onCallSupport:
-    -0125632365
-    -0125632367
-
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
