--- a/card/src/main/resources/application.yml
+++ b/card/src/main/resources/application.yml
@@ -5,7 +5,6 @@ server:
 
 
 
-
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
@@ -20,24 +19,23 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-  config:
-    import:
-      - "application_prod.yml"
-      - "application_qa.yml"
+  application:
+    name: "cards"
   profiles:
-    active: "prod"
+    active: "qa"
+  config:
+    import: "optional:configserver:http://localhost:8071/"
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: "guest"
+    password: "guest"
 
-build:
-  version: "1.0"
-
-accounts:
-  message: "Welcome to EazyBank accounts related local APIs "
-  contactDetails:
-    name: "John Doe - Developer"
-    email: "john@eazybank.com"
-  onCallSupport:
-    - (555) 555-1234
-    - (555) 523-1345
+  managment:
+    endpoints:
+      web:
+        exposure:
+          include: "*"
 
 #spring:
 #  datasource:
