--- a/configserver/src/main/resources/config/accounts.yml
+++ b/configserver/src/main/resources/config/accounts.yml
@@ -1,16 +1,13 @@
-spring:
-  config:
-    activate:
-      on-profile: "qa"
-
 build:
-  version: "2.0"
+  version: "1.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related QA APIs "
+  message: "Welcome to microservices accounts related default APIs "
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
     email: "aishwarya@eazybank.com"
   onCallSupport:
     - (453) 392-4829
     - (236) 203-0384
+
+
