--- a/card/src/main/resources/application.yml
+++ b/card/src/main/resources/application.yml
@@ -1,41 +1,30 @@
 server:
   servlet:
-    context-path: /card-service
+    context-path: "/cards-service"
   port: 9000
 
-
-
 spring:
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
-    show-sql: true
   application:
-    name: "cards"
+    name: "accounts"
   profiles:
-    active: "qa"
+    active: "prod"
+  datasource:
+    url: jdbc:mysql://localhost:3308/cardsdb
+    username: root
+    password: P@ssw0rd1234
+  jpa:
+    show-sql: true
+  sql:
+    init:
+      mode: always
   config:
     import: "optional:configserver:http://localhost:8071/"
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: "guest"
-    password: "guest"
 
-  managment:
-    endpoints:
-      web:
-        exposure:
-          include: "*"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
 #spring:
 #  datasource:
