--- a/loan/src/main/resources/application.yml
+++ b/loan/src/main/resources/application.yml
@@ -1,53 +1,28 @@
 server:
   servlet:
-    context-path: /loans-service
+    context-path: "/loans-service"
   port: 8090
 
 
 spring:
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
-    show-sql: true
   application:
-    name: "loans"
+    name: "accounts"
   profiles:
-    active: "qa"
+    active: "prod"
+  datasource:
+    url: jdbc:mysql://localhost:3307/loansdb
+    username: root
+    password: P@ssw0rd1234
+  jpa:
+    show-sql: true
+  sql:
+    init:
+      mode: always
   config:
     import: "optional:configserver:http://localhost:8071/"
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: "guest"
-    password: "guest"
 
   management:
     endpoints:
       web:
         exposure:
           include: "*"
-
-#
-#spring:
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/microservices
-#    driverClassName: com.mysql.cj.jdbc.Driver
-#    username: root
-#    password: 1234
-#  h2:
-#    console:
-#      enabled: true
-#  jpa:
-#    database-platform: org.hibernate.dialect.MySQL8Dialect
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
